# music-test

./: .cursorrules  .env.example  .gitignore  .kysely-codegenrc.json  LICENSE  README.md  bump.config.ts  eslint.config.mjs  knip.ts  nuxt.config.ts  package.json  renovate.json  tsconfig.json  uno.config.ts  vitest.config.ts  wdio.conf.ts
.github/workflows/: auto-author-assign.yml  autofix.yml  build-binaries.yml  release.yml  self-assign.yml  test-e2e.yml
app/: app.config.ts  app.vue  router.options.ts
app/assets/css/: globals.css  main.css
app/components/: cover-art.vue  tauri-dragover-provider.vue  track-list-entry-context-menu-content.vue  waveform.vue
app/components/Design/: BottomBlob.vue  TopBlob.vue
app/components/Layout/: Tile.vue
app/components/Site/: Navbar.vue
app/components/console/: index.vue
app/components/debug/: details.vue  fps.vue
app/components/form/: checkbox.vue  primitive.vue  select.vue  subtitle.vue  title.vue
app/components/layout/: bottom-bar.vue  library.vue  player.vue  playlist.vue  status-bar.vue  top-bar.vue  track-list.vue  waveform.vue
app/components/layout/bottom-bar/: player-button.vue
app/components/layout/panel/: console.vue  cover-art.ts  cover-art.vue  index.vue  layout.vue  library.vue  metadata.vue  player.vue  splitter-group.vue
app/components/layout/player/: seek-bar.vue
app/components/layout/playlist/: columns.vue  header.vue  row-context-menu.vue  row.vue  virtual-provider.vue
app/components/layout/sidebar/: left.vue  right.vue
app/components/layout/top-bar/: repeat.vue  seek-bar-title.vue  seek-bar.vue  volume.vue
app/components/layout/track-list/: columns.vue  header.vue  row-context-menu.vue  row.vue  virtual-provider.vue
app/components/modal/: folder-select.vue  item-search.vue  settings.vue
app/components/modal/settings/: content-layout.vue  content-tab-layout.vue  content.vue
app/components/playlist/: index.vue
app/components/u/: button.vue  checkbox.vue  copy-button.vue  hold-button.vue  input.vue  kbd.vue  label.vue  marquee.vue  separator.vue  skeleton.vue  slider.vue  spinner.vue  switch.vue  textarea.vue
app/components/u/alert-dialog/: alert-dialog-action.vue  alert-dialog-content.vue  alert-dialog-footer.vue
app/components/u/autocomplete/: autocomplete-anchor.vue  autocomplete-cancel.vue  autocomplete-content.vue  autocomplete-empty.vue  autocomplete-group.vue  autocomplete-input.vue  autocomplete-item-indicator.vue  autocomplete-item.vue  autocomplete-list.vue  index.ts  (+4 more)
app/composables/: on-keystroke-safe.ts  pages.ts  use-console.ts  use-context-menu.ts  use-drag.ts  use-draggable.ts  use-error.ts  use-global-keys.ts  use-global-pointer.ts  use-last-fm.ts  use-layout-panels.ts  use-layout.ts  use-library.ts  use-metadata.ts  use-persistent-panels.ts  use-play-count.ts  use-playback.ts  use-playing-track.ts  use-playlist-columns.ts  use-playlist-data.ts  use-playlist.ts  use-settings-modal.ts  use-settings-window.ts  use-settings.ts  use-sortable.ts  use-tauri-window.ts  use-tauri.ts  use-track-data.ts  use-track-list-columns.ts  use-track-list-refresh.ts  use-track-list-scroll-state.ts  use-track-list-search.ts  use-track-list.ts  use-track-selection.ts  use-user-playlists.ts
app/constants/: index.ts  layout-panels.ts  windows.ts
app/constants/layout/: elements.ts  panels.ts
app/layouts/: default.vue  home.vue  main.vue
app/modules/: tauri.ts
app/pages/: [...all].vue  commands.vue  file.vue  index.vue  library.vue  notifications.vue  os.vue  playground.vue  store.vue  webview.vue
app/pages/(windows)/: console.vue  set-displayed-fields.vue  settings.vue
app/pages/folder/: [path].vue
app/pages/playlist/: [id].vue
app/plugins/: appearance.ts  autocorrect.ts  context-menu-directive.ts  context-menu.client.ts  context-menu.ts  db.ts  directives.ts  drag.ts  errors.ts  font.ts  menu.ts  shortcuts.ts  stores.ts  tauri.client.ts  tauri.ts  test.ts  tests.ts  theme.client.ts  theme.ts
app/types/: db.ts  index.ts  tauri-bindings.ts
app/utils/: $db.ts  $lastfm.ts  blur-active-element.ts  build-cover-uri.ts  check-plural.ts  create-tauri-window.ts  define-draggable-options.ts  format-duration.ts  get-hasher.ts  get-input-type-from-entry.ts  get-track-title.ts  get-track-year.ts  get-tracks-data.ts  get-webview-window.ts  id3-map.ts  id3.ts  is-track-list-playlist.ts  object.ts  parse-iso.ts  setup-nuxt-tauri-plugin.ts  sort-track-list.ts  styles.ts  tauri-bindings.ts  validate-entry.ts  variants.ts  write-temp-file.ts
app/utils/fs/: exists.ts  is.ts
app/utils/id3/: format-id3-tag.ts
app/utils/lastfm/: schema.ts
app/utils/tauri/: invoke.ts  window-label-is.ts
scripts/: build.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: desktop.json  main.json  pinia.json  vue.json
src-tauri/src/: audio.rs  cover_protocol.rs  diesel_schema.rs  error.rs  id3.rs  lastfm.rs  lib.rs  main.rs  playback.rs  read.rs  stronghold.rs  test.rs  utils.rs  waveform.rs
src-tauri/src/files/: read.rs
src-tauri/src/hooks/: mod.rs  window_event.rs
test/e2e/: globals.d.ts
test/e2e/specs/: invoke.e2e.ts  invoke.ts  startup.ts
test/e2e/utils/: constants.ts  invoke.ts
test/setup/: nuxt.tauri.ts
types/: db.d.ts
(+95 files in other folders)
