[package]
name = "swim"
version = "0.0.0"
description = "Audio player made for archivists"
authors = [ "jvxz" ]
license = "MIT"
repository = "https://github.com/jvxz/swim"
edition = "2021"

[lib]
name = "swim_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies.tauri-build]
version = "2.4.1"
features = [ ]

[dependencies]
tauri-plugin-shell = "2.3.1"
tauri-plugin-notification = "2.3.1"
tauri-plugin-os = "2.3.1"
tauri-plugin-fs = "2.4.2"
tauri-plugin-store = "2.4.0"
tokio = "1.48.0"
taurpc = "0.5.2"
specta = { version = "=2.0.0-rc.22", features = [ "derive" ] }
id3 = "1.16.3"
log = "0.4.29"
dashmap = { version = "6.0.0", features = [ "serde" ] }
tauri-plugin-devtools = "2.0.0"
urlencoding = "2.1.3"
anyhow = "1.0.100"
lru = "0.16.2"
image = "0.25.9"
md5 = "0.8.0"
symphonia = { version = "0.5.5", features = [ "mp3" ] }
serde_json = "1.0.145"

[dependencies.tauri]
version = "2.9.1"
features = [
  "tray-icon",
  "unstable"
]

[dependencies.serde]
version = "1"
features = [ "derive" ]
