[package]
name = "swim"
version = "0.0.0"
description = "Audio player made for archivists"
authors = ["jvxz"]
license = "MIT"
repository = "https://github.com/jvxz/swim"
edition = "2021"

[lib]
name = "swim_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
dotenvy = "0.15.7"

[build-dependencies.tauri-build]
version = "2.4.1"
features = []

[dependencies]
tauri-plugin-shell = "2.3.1"
tauri-plugin-notification = "2.3.1"
tauri-plugin-os = "2.3.1"
tauri-plugin-fs = "2.4.2"
tauri-plugin-store = "2.4.0"
tauri-plugin-vue = "2.1.0"
tauri-plugin-pinia = "4.1.0"
tokio = "1.48.0"
taurpc = "0.5.2"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
id3 = "1.16.3"
log = "0.4.29"
dashmap = { version = "6.0.0", features = ["serde"] }
tauri-plugin-devtools = "2.0.0"
urlencoding = "2.1.3"
anyhow = "1.0.100"
image = "0.25.9"
md5 = "0.8.0"
symphonia = { version = "0.5.5", features = [
  "mp3",
  "isomp4",
  "aac",
  "flac",
  "ogg",
  "mkv",
  "alac",
  "vorbis",
] }
serde_json = "1.0.145"
kira = "0.11.0"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-drag = "2.1.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-stronghold = "2"
last-fm-rs = "20251214.0.2"
tauri-plugin-opener = "2"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rand = "0.9.2"
uuid = { version = "1.19.0", features = ["v4"] }
iota_stronghold = "2.1.0"
tauri-plugin-http = "2"
thiserror = "2.0.17"
tauri-plugin-system-fonts = "2.0.2"

[dependencies.tauri]
version = "2.9.1"
features = ["tray-icon", "unstable"]

[dependencies.serde]
version = "1"
features = ["derive"]

# optimize kira for dev
[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.scrypt]
opt-level = 3

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
