[package]
name = "swim"
version = "0.0.0"
description = "Audio player made for archivists"
authors = [ "jvxz" ]
license = "MIT"
repository = "https://github.com/jvxz/swim"
edition = "2021"

[lib]
name = "swim_lib"
crate-type = [
  "staticlib",
  "cdylib",
  "rlib"
]

[build-dependencies]
dotenvy = "0.15.7"

[build-dependencies.tauri-build]
version = "2.5.5"
features = []

[dependencies]
tauri-plugin-shell = "2.3.5"
tauri-plugin-notification = "2.3.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-fs = "2.4.5"
tauri-plugin-store = "2.4.2"
tauri-plugin-pinia = { git = "https://github.com/jvxz/tauri-store" }
tokio = "1.49.0"
specta = { version = "=2.0.0-rc.22", features = [ "derive" ] }
id3 = "1.16.4"
log = "0.4.29"
dashmap = { version = "6.1.0", features = [ "serde" ] }
tauri-plugin-devtools = "2.0.1"
urlencoding = "2.1.3"
anyhow = "1.0.102"
image = "0.25.9"
md5 = "0.8.0"
symphonia = { version = "0.5.5", features = [
  "mp3",
  "isomp4",
  "aac",
  "flac",
  "ogg",
  "mkv",
  "alac",
  "vorbis",
] }
serde_json = "1.0.149"
kira = "0.11.0"
tauri-plugin-sql = { version = "2", features = [ "sqlite" ] }
tauri-plugin-drag = "2.1.0"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-stronghold = "2"
last-fm-rs = "20251214.0.2"
tauri-plugin-opener = "2"
keyring = { version = "3", features = [
  "apple-native",
  "windows-native",
  "sync-secret-service"
] }
rand = "0.9.2"
uuid = { version = "1.21.0", features = [ "v4" ] }
iota_stronghold = "2.1.0"
tauri-plugin-http = "2"
thiserror = "2.0.18"
tauri-plugin-system-fonts = "2.0.2"
tauri-specta = { version = "=2.0.0-rc.21", features = [
  "derive",
  "typescript"
] }
specta-typescript = "0.0.9"
jwalk = "0.8.1"

[dependencies.tauri]
version = "2.10.2"
features = [ "tray-icon", ]

[dependencies.serde]
version = "1"
features = [ "derive" ]

[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.scrypt]
opt-level = 3

[profile.dev.package.iota_stronghold]
opt-level = 3

[profile.dev.package.stronghold_engine]
opt-level = 3

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
